name:                servant-isomaniac
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              jeremy@n-heptane.com
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Isomaniac
  other-extensions:    CPP, DataKinds, FlexibleContexts, FlexibleInstances, InstanceSigs, OverloadedStrings, ScopedTypeVariables, TypeFamilies, TypeOperators, UndecidableInstances, OverlappingInstances
  build-depends:       base >=4.8 && <4.9, transformers >=0.4 && <0.5, bytestring >=0.10 && <0.11, text >=1.2 && <1.3, isomaniac, servant, exceptions, safe, http-api-data, hsx2hs, hsp
  default-language:    Haskell2010