name:                servant-isomaniac
version:             0.2.0.0
license:             BSD3
license-file:        LICENSE
author:              jeremy@n-heptane.com
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Isomaniac
                       Servant.Common.Req
                       Servant.Common.BaseUrl
  other-extensions:    CPP, DataKinds, FlexibleContexts, FlexibleInstances, InstanceSigs, OverloadedStrings, ScopedTypeVariables, TypeFamilies, TypeOperators, UndecidableInstances, OverlappingInstances
  build-depends:       ghcjs-base,
                       aeson,
                       base,
                       transformers >=0.4 && <0.5,
                       bytestring >=0.10 && <0.11,
                       text >=1.2 && <1.3,
                       isomaniac >= 0.3 && < 0.4,
                       servant,
                       exceptions,
                       safe,
                       string-conversions,
                       http-api-data,
                       http-types,
                       http-media,
                       hsx2hs,
                       hsp,
                       network-uri,
                       stm
  default-language:    Haskell2010
